--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>FriendFinder</title>
-    <link rel="stylesheet" type="text/css" href="public/css/styles.css">
+    <link rel="stylesheet" type="text/css" href="public/style.css">
     <!-- Latest compiled and minified CSS & JS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery.js"></script>
@@ -20,9 +20,9 @@
     <div class="container">
 
         <div class="jumbotron">
-            <h1 class=""><i class="fa fa-facebook-square" aria-hidden="true"></i> Friend Finder</h1>
+            <h1 class=""> Find a Friend</h1>
             <hr>
-            <h2 class="">Answer a few basic questions. </h2>
+            <h2 class="">Answer some questions. </h2>
             <h2 class="">Then find the friend with the greatest compatibility!</h2>
             <br>
 
